# rh-finance-bot

./: .gitignore  README.md  main.py  purge.py  pyproject.toml
templates/: template.html
