[tool.poetry]
name = "rh-finance-bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.14"
requests = "^2.28.1"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
telegram = "^0.0.1"
replit = "^3.2.5"
replitdb = "^0.0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
